[gd_scene load_steps=4 format=3 uid="uid://u4mbyrjih04t"]

[ext_resource type="Script" uid="uid://b6w4i0378xmxf" path="res://reward/reward_item/reward_item_ui.gd" id="1_b1dsv"]
[ext_resource type="Texture2D" uid="uid://6osj1td72qmh" path="res://_assets/icon.svg" id="2_1sm68"]
[ext_resource type="Texture2D" uid="uid://bk803hmjyl787" path="res://_assets/ui_green/square481.png" id="3_1sm68"]

[node name="RewardItemUI" type="CenterContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -82.5
offset_right = 69.0
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b1dsv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Thumbnail" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_1sm68")

[node name="Selection" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_1sm68")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Item description"
horizontal_alignment = 1

[connection signal="mouse_entered" from="MarginContainer" to="." method="_on_margin_container_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer" to="." method="_on_margin_container_mouse_exited"]
